Prevent Pigeon ultimate screen freezes